# QT-PY-esp32s3-RPi-RF-Coprocessor

./: BUILD_RESULTS.md  CMakeLists.txt  COMMANDS.md  FLASHING.md  README.md  VALIDATION.md  sdkconfig.defaults
main/: CMakeLists.txt  ble_scan.c  ble_scan.h  command_router.c  command_router.h  common.h  config_store.c  config_store.h  diagnostics.c  diagnostics.h  event_buffer.c  event_buffer.h  json_output.c  json_output.h  main.c  serial_console.c  serial_console.h  wifi_control.c  wifi_control.h  wifi_promisc.c  wifi_promisc.h  wifi_scan.c  wifi_scan.h
tools/: command_test.py  flash_from_pi.sh  flash_from_windows.ps1  serial_test.py  validate_source.py
